[tool.poetry]
name = "merakiFirewalledServices"
version = "0.1.3"
description = "Get Security Appliance Firewalled Services status from Meraki dashboard"
keywords = ['meraki', 'python']
authors = ["Gian Paolo Boarina"]
license = "Apache-2.0"
readme = "README.MD"
homepage = "https://github.com/routetonull/merakiFirewalledServices"
repository = "https://github.com/routetonull/merakiFirewalledServices"

[tool.poetry.scripts]
merakiFirewalledServices = "merakifirewalledservices.merakiFirewalledServices:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.7.4.post0"
async-timeout = "3.0.1"
attrs = "21.2.0"
certifi = "2021.5.30"
chardet = "4.0.0"
charset-normalizer = "2.0.5"
click = "8.0.1"
colorama = "0.4.4"
commonmark = "0.9.1"
idna = "3.2"
meraki = "1.12.0"
multidict = "5.1.0"
Pygments = "2.10.0"
requests = "2.26.0"
rich = "10.9.0"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.6"
yarl = "1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
